[package]
categories = ["science", "science::robotics", "navigation"]
description = "Yet Another Kalman Filter Implementation, as well as, Lie Theory (Lie group, algebra, vector) on SO(3) and SE(3). [no_std] is supported by default."
edition = "2021"
exclude = [
  "target/*",
  ".gitignore",
  ".cargo/*",
  "Cargo.lock",
]
keywords = ["no-std", "estimation", "filtering", "ukf"]
license = "MIT OR Apache-2.0"
name = "yakf"
repository = "https://github.com/wangxiaochuTHU/yakf"
version = "0.1.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hifitime = "3.2.0"
itertools = "0.10.3"
log = "0.4"
nalgebra = {git = "https://github.com/dimforge/nalgebra", features = ["default"]}
# nalgebra = {version = "0.30.0"}

[dev-dependencies]
libc-print = "0.1.19"
rand = "0.8.5"
