[package]
categories = ["science", "science::robotics", "navigation"]
description = "Yet Another Kalman Filter Implementation, as well as, Lie Theory (Lie group, algebra, vector) on SO(3) and SE(3). [no_std] is supported by default."
edition = "2021"
exclude = [
  "target/*",
  ".gitignore",
  ".cargo/*",
  "Cargo.lock",
]
keywords = ["no-std", "estimation", "filtering", "ukf"]
license = "MIT OR Apache-2.0"
name = "yakf"
repository = "https://github.com/wangxiaochuTHU/yakf"
version = "0.1.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hifitime = { version="3.2.0",default-features = false}
itertools = { version = "0.10.3",default-features = false}
log = "0.4"
# nalgebra = {git = "https://github.com/dimforge/nalgebra", features = ["default"]}
nalgebra = {version = "0.30",default-features = false,features = ["libm-force","alloc"]}
libm = "0.2.2"
num-traits = {version = "0.2.15", default-features = false}

[dev-dependencies]
libc-print = "0.1.19"
rand = "0.8.5"
